# car-interface

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-image.yml  keep-runners-alive.yml  push-and-update.yml  update.yml  updater.yml
backend/: Dockerfile
backend/interface/: celery_config.py  celery_utils.py  database.py  main.py  models.py  redis_connection.py  tasks.py  utils.py
backend/interface/controls/: controls.py  controls_api.py  tasks.py
backend/interface/ecoflow/: ecoflow.py  ecoflow_api.py  test.py
backend/interface/keyless/: keyless.py  keyless_api.py  scan.py  test.py
backend/interface/obd/: obd.py  obd_api.py
car_dashboard/: Dockerfile  package-lock.json  package.json
interface/: main.py  models.py
interface/controls/: controls.py  controls_api.py
interface/obd/: obd_api.py
services/: check_network.sh  crontab  restart_modem.sh
services/systemd/: after_boot.sh  boot_run.service  ngrok.service  ngrok.yml
