[tool.poetry]
name = "car-interface"
version = "0.1.0"
description = "car-react-flask-interface"
authors = ["Shuhrat Talukder"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
obd = "^0.7.2"
sqlalchemy = "^2.0.28"
pyfirmata2 = "^2.4.5"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "backend.interface.main:app"


[tool.taskipy.tasks]
dev_dashboard = "cd car_dashboard && npm install && npm run start"
build_dashboard = "cd car_dashboard && npm install && npm run build"
