[tool.poetry]
name = "car-interface"
version = "0.1.0"
description = "car-react-flask-interface"
authors = ["Shuhrat Talukder"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
obd = "^0.7.2"
sqlalchemy = "^2.0.28"
pyfirmata2 = "^2.4.5"
requests = "^2.32.3"
paho-mqtt = "^2.1.0"
bleak = "^0.22.2"
redis = "^5.2.0"
celery = "^5.4.0"
flower = "^2.0.1"
celery-once = "^3.0.1"
kombu = "^5.4.2"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "backend.interface.main:app"


[tool.taskipy.tasks]
dev_dashboard = "cd car_dashboard && npm install && npm run start"
build_dashboard = "cd car_dashboard && npm install && npm run build"
